[package]
name = "nekodumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2"
base64 = "0.13.0"
walkdir = "2"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = {version =  "1.0.137",features = ["derive"]}
serde_json = "1.0"
anyhow = "1"

[profile.release]
strip = true
lto = true
panic = "abort"
