[package]
name = "nekodumper"
version = "0.1.3"
description = "Offline export tool for some APP"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2"
base64 = "0.13.0"
walkdir = "2"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
rayon = "1.5.3"
clap = { version = "3", features = ["derive"] }
log = "0.4"
fern = "0.6"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
flate2 = "1"
epub-builder = "0.5"
once_cell = "1"
mime_guess = "2"
regex = "1"

[profile.release]
strip = true
lto = true
panic = "abort"
