[package]
name = "nekodumper"
version = "0.2.5"
description = "Cache export tool for some APP"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
once_cell = "1"
log = "0.4"
fern = "0.6"
walkdir = "2"
regex = "1"
mime_guess = "2"
base64 = "0.13.0"
# openssl = { version = "0.10", features = ["vendored"] }
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5.3"
clap = { version = "3", features = ["derive"] }
indicatif = { version = "0.16", features = ["rayon"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["http1", "http2", "client"] }
hyper-tls = { version = "0.5", features = ["vendored"] }
flate2 = "1"
epub-builder = "0.5"

[profile.release]
strip = true
lto = true
panic = "abort"
